test/scc_test/exp/semantic-errors/092.a
092.t:5:9: error: expression must have arithmetic type